Dmc2610Demo/VC.NET/dmc2610_demo/DMC2610.h

typedef unsigned short      WORD;
DMC2610_API void __stdcall d2610_ex_s_pmove(WORD axis,long Dist,WORD posi_mode);
//单轴连续运动
DMC2610_API void __stdcall d2610_s_vmove(WORD axis,WORD dir);
DMC2610_API void __stdcall d2610_t_vmove(WORD axis,WORD dir);
//线性插补
DMC2610_API void __stdcall d2610_t_line2(WORD axis1,long Dist1,WORD axis2,long Dist2,WORD posi_mode);
DMC2610_API void __stdcall d2610_t_line3(WORD *axis,long Dist1,long Dist2,long Dist3,WORD posi_mode);
DMC2610_API void __stdcall d2610_t_line4(WORD cardno,long Dist1,long Dist2,long Dist3,long Dist4,WORD posi_mode);
DMC2610_API void __stdcall d2610_t_line6(WORD cardno, long *p_dist, WORD posi_mode);
//手轮运动
DMC2610_API void __stdcall d2610_set_handwheel_inmode(WORD axis,WORD inmode,WORD count_dir);
DMC2610_API void __stdcall d2610_handwheel_move(WORD axis,double vh);
//找原点
/********************************************************************************
** 函数名称: d2610_config_home_mode
** 功能描述: 设置home 模式
** 输　  入: axis, mode- 0:只计org, 1:计org和EZ,  EZ_count: 1-16 个信号
			     mode: 0 - 只计org，   不复位计数器
				       1 - 计org和EZ， 不复位计数器
					   2 - 只计org，   复位计数器
				       3 - 计org和EZ， 复位计数器
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_home_mode(WORD axis,WORD mode,WORD EZ_count);
DMC2610_API void __stdcall d2610_home_move(WORD axis,WORD home_mode,WORD vel_mode);
//圆弧插补
DMC2610_API void __stdcall d2610_arc_move(WORD *axis,long *target_pos,long *cen_pos, WORD arc_dir);
DMC2610_API void __stdcall d2610_rel_arc_move(WORD *axis,long *rel_pos,long *rel_cen, WORD arc_dir);
//设置和读取位置比较信号
/********************************************************************************
** 函数名称: d2610_config_CMP_PIN
** 功能描述: 控制CMP端子和out17 - 20的功能:  配置为通用输出或位置比较输出, 默认为通用输出口
** 输　  入: axis:轴号
**			 cmp1_enable: 0: 将CMP端子配置为通用端子 1: 配置为比较输出
             cmp2_enable: 0: 默认设置为0
             CMP_logic: 0:负逻辑, 1: 正逻辑
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_CMP_PIN(WORD axis, WORD cmp1_enable,  WORD cmp2_enable, WORD CMP_logic);
DMC2610_API int __stdcall d2610_read_CMP_PIN(WORD axis);
DMC2610_API void __stdcall d2610_write_CMP_PIN(WORD axis, WORD on_off);
/********************************************************************************
** 函数名称: d2610_config_comparator
** 功能描述: 比较器控制函数
** 输　  入: axis  轴号
			 cmp1_condition: 比较器1 的触发条件，
			       0: 关闭比较器功能。
				   1: 计数器的值等于比较器
				   2: 计数器的值小于比较器的值
				   3: 计数器的值大于比较器的值
			 cmp2_condition: 比较器2 的触发条件，
			       0: 关闭比较器功能。
				   1: 计数器的值等于比较器
				   2: 计数器的值小于比较器的值
				   3: 计数器的值大于比较器的值
             source_sel - 为比较器选择相比较的计数源, (保留设置为0，比较指令位置)
                      0: 比较器1,2均选择指令脉冲计数器,                   
             SL_action: 保留设置为0, 暂未用
** 返 回 值: 无 
*********************************************************************************/
void __stdcall d2610_config_comparator(WORD axis, WORD cmp1_condition, WORD cmp2_condition, WORD source_sel,WORD SL_action);
/********************************************************************************
** 函数名称: d2610_set_comparator_data
** 功能描述: 设置比较数据 
** 输　  入: axis - 轴号
             cmp1_data: 比较点1的数据
			 cmp2_data: 比较点2的数据
**
** 返 回 值: 无 
*********************************************************************************/
void __stdcall d2610_set_comparator_data(WORD axis,long cmp1_data,long cmp2_data);
//---------------------   编码器计数功能PLD  ----------------------//
DMC2610_API long __stdcall d2610_get_encoder(WORD axis);
DMC2610_API void __stdcall d2610_set_encoder(WORD axis,long encoder_value);
/********************************************************************************
** 函数名称: d2610_config_EZ_PIN
** 功能描述: 配置EZ的逻辑和EZ工作方式;
             将EA，EB改为了允许输入。
** 输　  入: axis 
			 ez_logic： 0：低有效， 1：高有效
**           ez_mode:  
**				   0：EZ信号无效, EZ和LTC复用, 置为LTC有效
**                 1: 功能1：EZ是索引 
**                 2: 功能2：EZ是原点信号 
**                 3: 功能3：EZ是原点信号 
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_EZ_PIN(WORD axis,WORD ez_logic, WORD ez_mode);
DMC2610_API void __stdcall d2610_config_LTC_PIN(WORD axis,WORD ltc_logic, WORD ltc_mode);
DMC2610_API void __stdcall d2610_config_latch_mode(WORD cardno, WORD all_enable);
DMC2610_API void __stdcall d2610_counter_config(WORD axis,WORD mode);
DMC2610_API long __stdcall d2610_get_latch_value(WORD axis);
DMC2610_API long __stdcall d2610_get_latch_flag(WORD cardno);
DMC2610_API void __stdcall d2610_reset_latch_flag(WORD cardno);
DMC2610_API void __stdcall d2610_reset_clear_flag(WORD cardno);
DMC2610_API void __stdcall d2610_triger_chunnel(WORD cardno, WORD num);
DMC2610_API void __stdcall d2610_set_speaker_logic(WORD cardno, WORD logic);
//other
/********************************************************************************
** 函数名称: d2610_config_EMG_PIN
** 功能描述: EMG设置
** 输　  入: axis - (0 - 3), enable - 0:无效; 1:有效
**              emg_logic: 0:低有效; 1:高有效
** 返 回 值: 无 
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_EMG_PIN(WORD cardno, WORD enable,WORD emg_logic);
//滤波器配置
/********************************************************************************
** 函数名称: d2610_config_LTC_filter
** 功能描述: 配置LTC信号的滤波器参数，四轴同时配置
** 输　  入: cardno : 卡号
             WORD width: 0-255;  范围可配置为 8MHZ ~ 32K Hz, 高于设定频率的信号会被滤掉.
                  滤波频率的计算: f = 8M Hz / (width + 1)
             WORD enable
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_LTC_filter(WORD cardno,WORD width, WORD enable);
/********************************************************************************
** 函数名称: d2610_config_encoder_filter
** 功能描述: 配置编码器EA, EB, EZ的滤波器参数，各轴单独配置
** 输　  入: axis : 轴号, 多卡运行时轴号依次往后排, 如第二张卡: 轴号(4 - 7) 
             WORD width: 0-255;  范围可配置为 8MHZ ~ 32K Hz, 高于设定频率的信号会被滤掉.
                  滤波频率的计算: f = 8M Hz / (width + 1) 
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_encoder_filter(WORD axis,WORD width, WORD enable);