DrilTapeTest1/DrilTapeTest1/DMC2610.cs


        [DllImport("DMC2610.dll", EntryPoint = "d2610_ex_s_pmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_ex_s_pmove(UInt16 axis, Int32 Dist, UInt16 posi_mode);

        //单轴连续运动

        [DllImport("DMC2610.dll", EntryPoint = "d2610_s_vmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_s_vmove(UInt16 axis, UInt16 dir);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_vmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_vmove(UInt16 axis, UInt16 dir);

        //线性插补

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_line2", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_line2(UInt16 axis1, Int32 Dist1, UInt16 axis2, Int32 Dist2, UInt16 posi_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_line3", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_line3(ref UInt16 axis, Int32 Dist1, Int32 Dist2, Int32 Dist3, UInt16 posi_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_line4", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_line4(UInt16 cardno, Int32 Dist1, Int32 Dist2, Int32 Dist3, Int32 Dist4, UInt16 posi_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_line6", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_line6(UInt16 cardno, ref Int32 p_dist, UInt16 posi_mode);

        //手轮运动

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_handwheel_inmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_handwheel_inmode(UInt16 axis, UInt16 inmode, UInt16 count_dir);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_handwheel_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_handwheel_move(UInt16 axis, double vh);

        //找原点
        /********************************************************************************
        ** 函数名称: d2610_config_home_mode
        ** 功能描述: 设置home 模式
        ** 输　  入: axis, mode- 0:只计org, 1:计org和EZ,  EZ_count: 1-16 个信号
			             mode: 0 - 只计org，   不复位计数器
				               1 - 计org和EZ， 不复位计数器
					           2 - 只计org，   复位计数器
				               3 - 计org和EZ， 复位计数器
        ** 返 回 值: 无
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_home_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_home_mode(UInt16 axis, UInt16 mode, UInt16 EZ_count);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_home_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_home_move(UInt16 axis, UInt16 home_mode, UInt16 vel_mode);

        //圆弧插补

        [DllImport("DMC2610.dll", EntryPoint = "d2610_arc_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_arc_move(ref UInt16 axis, ref Int32 target_pos, ref Int32 cen_pos, UInt16 arc_dir);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_rel_arc_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_rel_arc_move(ref UInt16 axis, ref Int32 rel_pos, ref Int32 rel_cen, UInt16 arc_dir);


        //设置和读取位置比较信号
        /********************************************************************************
        ** 函数名称: d2610_config_CMP_PIN
        ** 功能描述: 控制CMP端子和out17 - 20的功能:  配置为通用输出或位置比较输出, 默认为通用输出口
        ** 输　  入: axis:轴号
        **			 cmp1_enable: 0: 将CMP端子配置为通用端子 1: 配置为比较输出
                     cmp2_enable: 0: 默认设置为0
                     CMP_logic: 0:负逻辑, 1: 正逻辑
        ** 返 回 值: 无
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_CMP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_CMP_PIN(UInt16 axis, UInt16 cmp1_enable, UInt16 cmp2_enable, UInt16 CMP_logic);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_CMP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern int d2610_read_CMP_PIN(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_write_CMP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_write_CMP_PIN(UInt16 axis, UInt16 on_off);

        /********************************************************************************
        ** 函数名称: d2610_config_comparator
        ** 功能描述: 比较器控制函数
        ** 输　  入: axis  轴号
			         cmp1_condition: 比较器1 的触发条件，
			               0: 关闭比较器功能。
				           1: 计数器的值等于比较器
				           2: 计数器的值小于比较器的值
				           3: 计数器的值大于比较器的值
			         cmp2_condition: 比较器2 的触发条件，
			               0: 关闭比较器功能。
				           1: 计数器的值等于比较器
				           2: 计数器的值小于比较器的值
				           3: 计数器的值大于比较器的值
                     source_sel - 为比较器选择相比较的计数源, (保留设置为0，比较指令位置)
                              0: 比较器1,2均选择指令脉冲计数器,                   
                     SL_action: 保留设置为0, 暂未用
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_comparator", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_comparator(UInt16 axis, UInt16 cmp1_condition, UInt16 cmp2_condition, UInt16 source_sel, UInt16 SL_action);

        /********************************************************************************
        ** 函数名称: d2610_set_comparator_data
        ** 功能描述: 设置比较数据 
        ** 输　  入: axis - 轴号
                     cmp1_data: 比较点1的数据
			         cmp2_data: 比较点2的数据
        **
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_comparator_data", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_comparator_data(UInt16 axis, Int32 cmp1_data, Int32 cmp2_data);


        //---------------------   编码器计数功能PLD  ----------------------//

        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_encoder", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_encoder(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_encoder", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_encoder(UInt16 axis, Int32 encoder_value);

        /********************************************************************************
        ** 函数名称: d2610_config_EZ_PIN
        ** 功能描述: 配置EZ的逻辑和EZ工作方式;
                     将EA，EB改为了允许输入。
        ** 输　  入: axis 
			         ez_logic： 0：低有效， 1：高有效
        **           ez_mode:  
        **				   0：EZ信号无效, EZ和LTC复用, 置为LTC有效
        **                 1: 功能1：EZ是索引 
        **                 2: 功能2：EZ是原点信号 
        **                 3: 功能3：EZ是原点信号 
        ** 返 回 值: 无
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_EZ_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_EZ_PIN(UInt16 axis, UInt16 ez_logic, UInt16 ez_mode);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_LTC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_LTC_PIN(UInt16 axis, UInt16 ltc_logic, UInt16 ltc_mode);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_latch_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_latch_mode(UInt16 cardno, UInt16 all_enable);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_counter_config", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_counter_config(UInt16 axis, UInt16 mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_latch_value", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_latch_value(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_latch_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_latch_flag(UInt16 cardno);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_reset_latch_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_reset_latch_flag(UInt16 cardno);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_reset_clear_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_reset_clear_flag(UInt16 cardno);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_triger_chunnel", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_triger_chunnel(UInt16 cardno, UInt16 num);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_speaker_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_speaker_logic(UInt16 cardno, UInt16 logic);

        //other
        /********************************************************************************
        ** 函数名称: d2610_config_EMG_PIN
        ** 功能描述: EMG设置
        ** 输　  入: axis - (0 - 3), enable - 0:无效; 1:有效
        **              emg_logic: 0:低有效; 1:高有效
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_EMG_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_EMG_PIN(UInt16 cardno, UInt16 enable, UInt16 emg_logic);


        //滤波器配置
        /********************************************************************************
        ** 函数名称: d2610_config_LTC_filter
        ** 功能描述: 配置LTC信号的滤波器参数，四轴同时配置
        ** 输　  入: cardno : 卡号
                     UInt16 width: 0-255;  范围可配置为 8MHZ ~ 32K Hz, 高于设定频率的信号会被滤掉.
                          滤波频率的计算: f = 8M Hz / (width + 1)
                     UInt16 enable
        ** 返 回 值: 无
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_LTC_filter", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_LTC_filter(UInt16 cardno, UInt16 width, UInt16 enable);

        /********************************************************************************
        ** 函数名称: d2610_config_encoder_filter
        ** 功能描述: 配置编码器EA, EB, EZ的滤波器参数，各轴单独配置
        ** 输　  入: axis : 轴号, 多卡运行时轴号依次往后排, 如第二张卡: 轴号(4 - 7) 
                     UInt16 width: 0-255;  范围可配置为 8MHZ ~ 32K Hz, 高于设定频率的信号会被滤掉.
                          滤波频率的计算: f = 8M Hz / (width + 1) 
        ** 返 回 值: 无
        *********************************************************************************/
